--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,64 @@
-
-.Subtitle {
-    display: inline-block;
+body {
 }
-    ul {
-        font-family: Arial, Helvetica, sans-serif;
-        color: #1C307D;
-    }
-    h2 {
-        font-family: arial, helvetica, sans-serif;
-        color: #1C307D;
-    }
-    p {
-        font-family: arial, helvetica, sans-serif;
-        color: #1C307D;
-    }
+.navigation {
+    background-color: white;
+    padding: 15px;
+    display:flex;
+    max-width: 100%;
+}
+.Logo {
+    display: flex;
+}
+.MyLogoimage img{
+    max-width: 100px;
+    height: auto;
+}
+header li {
+    display: inline-block;
+    align: auto;
+    padding: 1%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1C307D;  
+}
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1C307D;  
+}
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1C307D;  
+}
+.content {
+    height: 100%;
+    padding: 25px;
+    width: 500px;
+    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+    Color: #5B5C61;
+    text-align: center;
+}
+.MyPhoto img{
+    max-width: 50%;
+}
+.ResumeButton {
+    background-color: #6F1854;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+ }
+footer {
+    bottom: 0;
+    background-color: #6F1854;
+    display: inline-block;
+    width: 100%;
+}
+footer ul{
+    padding: 25px;
+    width:auto;
+    margin-left:auto;
+}
+footer li {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 
-
-
+}
 
